Added some styling modifications

--- a/index.html
+++ b/index.html
@@ -2376,7 +2376,7 @@
       }
 
       .card-link {
-        color: var(--primary-purple);
+        color: var(--primary-purple) !important;
         font-size: 14px;
         font-weight: 700;
         text-decoration: none;
